--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,10 +28,12 @@ jobs:
     - name: Build Docker Image
       run: |
         docker build -t juanantonio291/docker-graphql:0.0.2 .
+        docker build -t juanantonio291/docker-graphql:latest .
     
     - name: Push Docker Image
       run: |
         docker push juanantonio291/docker-graphql:0.0.2
+        docker push juanantonio291/docker-graphql:latest
     
     
     
